Remove duplicate id tags in styling. Removed nested forms from <p> tags and replace with <div>. Update category list to remove whitespace and fix error when rerendering the list in the dropdown menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,7 +192,7 @@ a:-webkit-any-link {
     transform: scale(1.6);
 }
 
-#like-btn-after {
+.like-btn-after {
     color: rgb(247, 52, 52);
 }
 
